#pragma once

#include "StateChild.h"


namespace StateNS {


class Title : public Child{
public:
	Title();
	~Title();
	void initialize();
	Child* update(const GrandParent*);
	void draw() const;
	Child* nextScene(int);


private:
	int mBackImg;
	int count = 0;
	bool pushZ, pushUP, pushDOWN;
	int step;
	int select;
};




}